Updated Data model and controllers

--- a/MiraiConsultMVC/Views/Home/Index.cshtml
+++ b/MiraiConsultMVC/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
     ViewBag.Title = "Home Page";
 }
 @section featured {
-    <section class="featured">
+    @*<section class="featured">
         <div class="content-wrapper">
             <hgroup class="title">
                 <h1>@ViewBag.Title.</h1>
@@ -16,9 +16,9 @@
                 <a href="http://forums.asp.net/1146.aspx/1?MVC" title="ASP.NET MVC Forum">our forums</a>.
             </p>
         </div>
-    </section>
+    </section>*@
 }
-<h3>We suggest the following:</h3>
+@*<h3>We suggest the following:</h3>
 <ol class="round">
     <li class="one">
         <h5>Getting Started</h5>
@@ -42,4 +42,4 @@
         and price for your applications.
         <a href="http://go.microsoft.com/fwlink/?LinkId=245157">Learn more…</a>
     </li>
-</ol>
+</ol>*@
