--- a/MiraiConsultMVC/Content/custom.css
+++ b/MiraiConsultMVC/Content/custom.css
@@ -692,7 +692,7 @@ button {
 }
 
 input#txtsearch {
-    background-image: url(../image/search1.png);
+    background-image: url(../Content/image/search1.png);
     background-size: 14px;
     background-repeat: no-repeat;
     text-indent: 0px;
@@ -990,7 +990,7 @@ form {
 }
 
 body {
-    background: url(../image/bg.png) repeat-x scroll 0 0 #e9e9e8 !important;
+    background: url(../Content/image/bg.png) repeat-x scroll 0 0 #e9e9e8 !important;
     background-color: #e9e9e8;
     font-family: 'Raleway', sans-serif;
     !important;
@@ -1463,7 +1463,7 @@ input[readonly] {
 }
 
 #footer-area {
-    background: url("../image/footer-bot-bg.png") repeat-x scroll 0 0 #5C6F79;
+    background: url("../Content/image/footer-bot-bg.png") repeat-x scroll 0 0 #5C6F79;
     padding: 70px 0;
     font-size: 0.929em;
     position: relative;
