--- a/MiraiConsultMVC/Views/Home/Contact.cshtml
+++ b/MiraiConsultMVC/Views/Home/Contact.cshtml
@@ -1,50 +1,115 @@
-﻿@{
-    ViewBag.Title = "Contact";
+﻿@model MiraiConsultMVC.Models.Home.Contact
+<script type="text/javascript" src="../Scripts/bootstrap-dropdown.js"></script>
+@Scripts.Render("~/bundles/validation")
+@using (Html.BeginForm(new { autocomplete = "off" }))
+{
+    @Html.AntiForgeryToken()
+    @Html.ValidationSummary(true)
+    {
+        <div class="row-fluid">
+            <div class="span7 custom-center-small-div ">
+                <div class="row-fluid">
+                    <div class="span12">
+                        <div class="finddoc-title">
+                            Contact Us
+                        </div>
+                    </div>
+                </div>
+                <div class='row-fluid'>
+                    <div class="span12">
+                        <div class="title_color ">
+                            We would love to hear your thoughts and experience with Mirai Consult&#8482;.
+                        </div>
+                    </div>
+                </div>
+                <div class="custom-green-container custom-equal-padding gray-border">
+                    <div class='row-fluid'>
+                        <div class="span12 btn-padding-left controls-right-padding">
+                            @if (ViewBag.Message != null && ViewBag.Message == "Thank you for contacting us.")
+                            {
+                                <div class="wrapper-bordered alert alert-success" id="Messagediv" visible="true">
+                                    <label id="lblMessage">@ViewBag.Message</label>
+                                </div>
+                            }
+                            else if (ViewBag.Message != null && ViewBag.Message == "Failed to send email.")
+                            {
+                                <div class="wrapper-bordered alert alert-error" id="Messagediv" visible="true">
+                                    <label id="lblMessage">@ViewBag.Message</label>
+                                </div>
+                            }
+                            else
+                            {
+                                <div class="wrapper-bordered" id="Messagediv" visible="false">
+                                    <label id="lblMessage">@ViewBag.Message</label>
+                                </div>
+                            }
+                        </div>
+                    </div>
+                    @if (Session["UserId"] == null && Session["UserEmail"] == null)
+                    {
+                        <div class='row-fluid'>
+                            <div class="span12">
+                                <div class="span4 pull-left btn-padding-left">
+                                    <label class="required">Your Name:</label>
+                                </div>
+                                <div class="span8 pull-right btn-padding-left controls-right-padding">
+                                    @Html.TextBoxFor(m => m.Name, new { @class = "input-block-level gray-border", placeholder = "Enter your name." })
+                                    @Html.ValidationMessageFor(m => m.Name, string.Empty, new { @class = "validation-summary-errors" })
+                                </div>
+                            </div>
+                        </div>
+                        <br />
+                        <div class='row-fluid'>
+                            <div class="span12">
+                                <div class="span4 pull-left btn-padding-left">
+                                    <label class="required">Your Email:</label>
+                                </div>
+                                <div class="span8 pull-right btn-padding-left controls-right-padding">
+                                    @Html.TextBoxFor(m => m.Email, new { @class = "input-block-level gray-border", placeholder = "Enter your email address." })
+                                    @Html.ValidationMessageFor(m => m.Email, string.Empty, new { @class = "validation-summary-errors" })
+                                </div>
+                            </div>
+                        </div>
+                        <br />
+                    }
+                    <div class='row-fluid'>
+                        <div class="span12">
+                            <div class="span4 pull-left btn-padding-left">
+                                <label class="required">Your Message:</label>
+                            </div>
+                            <div class="span8 pull-right btn-padding-left controls-right-padding">
+                                @Html.TextAreaFor(m => m.message, new { @class = "input-block-level gray-border", rows = "4" })
+                                @Html.ValidationMessageFor(m => m.message, string.Empty, new { @class = "validation-summary-errors" })
+                            </div>
+                        </div>
+                    </div>
+                    <br />
+                    <div class="row-fluid">
+                        <div class="span12">
+                            <div class="span8 pull-right btn-padding-left">
+                                <input type="submit" id="btnSend" class="btn thanx gray-border" value="Send" />
+                                <input type="reset" id="btnClear" class="btn cancel gray-border" value="Reset" onclick="ClearMessage()" />
+                            </div>
+                        </div>
+                    </div>
+                    <br />
+                </div>
+            </div>
+        </div>
+    }
 }
+<script src="../Scripts/jquery-1.9.1.min.js"></script>
+<script>
+    function ClearMessage() {
+        document.getElementById('Messagediv').style.display = 'none';
+    }
+    (function (i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+            (i[r].q = i[r].q || []).push(arguments)
+        }, i[r].l = 1 * new Date(); a = s.createElement(o),
+        m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
-<hgroup class="title">
-    <h1>@ViewBag.Title.</h1>
-    <h2>@ViewBag.Message</h2>
-</hgroup>
-
-<section class="contact">
-    <header>
-        <h3>Phone</h3>
-    </header>
-    <p>
-        <span class="label">Main:</span>
-        <span>425.555.0100</span>
-    </p>
-    <p>
-        <span class="label">After Hours:</span>
-        <span>425.555.0199</span>
-    </p>
-</section>
-
-<section class="contact">
-    <header>
-        <h3>Email</h3>
-    </header>
-    <p>
-        <span class="label">Support:</span>
-        <span><a href="mailto:Support@example.com">Support@example.com</a></span>
-    </p>
-    <p>
-        <span class="label">Marketing:</span>
-        <span><a href="mailto:Marketing@example.com">Marketing@example.com</a></span>
-    </p>
-    <p>
-        <span class="label">General:</span>
-        <span><a href="mailto:General@example.com">General@example.com</a></span>
-    </p>
-</section>
-
-<section class="contact">
-    <header>
-        <h3>Address</h3>
-    </header>
-    <p>
-        One Microsoft Way<br />
-        Redmond, WA 98052-6399
-    </p>
-</section>
+    ga('create', 'UA-48132984-2', 'askmirai.com');
+    ga('send', 'pageview');
+</script>
