--- a/MiraiConsultMVC/Views/Shared/_PatientMasterLayout.cshtml
+++ b/MiraiConsultMVC/Views/Shared/_PatientMasterLayout.cshtml
@@ -97,9 +97,9 @@
                                     </li>
                                 </ul>
                             </div>
-                            <div class="singup_btn paddingrightby3">
+                            @*<div class="singup_btn paddingrightby3">
                                 <a href="../admin/Login.aspx" class="btn singup_a ">Log in</a>
-                            </div>
+                            </div>*@
                         }
                     </div>
                 </div>
@@ -107,7 +107,7 @@
                     <div class="custom-margin-box" style="border:none">
                         <div class="imgwidth">
                             <a class="brand" href="../home/home.aspx">
-                                <img src="../Resources/image/logo.png" class="col-md-4 logoimage-width" />
+                                <img src="../Content/image/logo.png" class="col-md-4 logoimage-width" />
                             </a>
                         </div>
                         <div class="container topnavbar-position topnavbar-position-bottom-margin reg-menu-search container-margin">
@@ -306,11 +306,11 @@
                 <div class="cust-inner-footer row-fluid span12">
                     <div class="center_align">
                         <div class="footer-margin-top" style="float:left;width:100%;">
-                            <a href="../home/privacypolicy.aspx" class="menu-links ">Privacy Policy</a>
+                            <a href="@Url.Action("PrivacyPolicy","Home")" class="menu-links ">Privacy Policy</a>
                             <span>|</span>
-                            <a href="../home/contactus.aspx" class="menu-links ">Contact Us </a>
+                            <a href="@Url.Action("Contact","Home")" class="menu-links ">Contact Us </a>
                             <span>|</span>
-                            <a href="../home/terms.aspx" class="menu-links">Terms Of Use</a>
+                            <a href="@Url.Action("TermsOfUse","Home")" class="menu-links">Terms Of Use</a>
                         </div>
                     </div>
                     <div class="hidden-phone">
@@ -365,9 +365,9 @@
                             </a>
                         </div>
                         <div class="span5 cust-footer-text center_align">
-                            <a class="cust-footer-text" href="../home/privacypolicy.aspx" target="_blank">Privacy Policy</a><a class="cust-footer-text" href="#">
+                            <a class="cust-footer-text" href="@Url.Action("PrivacyPolicy","Home")" target="_blank">Privacy Policy</a><a class="cust-footer-text" href="#">
                                 |
-                            </a>  <a class="cust-footer-text" href="../home/contactus.aspx" target="_blank">Contact Us</a> <a class="cust-footer-text" href="#">|</a> <a class="cust-footer-text" href="../home/terms.aspx" target="_blank">Terms Of Use</a>
+                            </a>  <a class="cust-footer-text" href="@Url.Action("Contact","Home")" target="_blank">Contact Us</a> <a class="cust-footer-text" href="#">|</a> <a class="cust-footer-text" href="@Url.Action("TermsOfUse","Home")" target="_blank">Terms Of Use</a>
                         </div>
                         <div class="span2 pull-right cust-footer-logo">
                             <a href="http://www.miraihealth.com/" target="_blank">
