--- a/MiraiConsultMVC/Views/Questions/QuestionList.cshtml
+++ b/MiraiConsultMVC/Views/Questions/QuestionList.cshtml
@@ -1,11 +1,11 @@
-﻿@{
+﻿@model MiraiConsultMVC.Models.QuestionFilters
+@{
     ViewBag.Title = "QuestionList";
     Layout = "~/Views/Shared/_PatientMasterLayout.cshtml";
 }
-
-<h2>QuestionList</h2>
-<asp:ScriptManager ID="ScriptManager1" runat="server" EnablePageMethods="true" EnablePartialRendering="true">
-</asp:ScriptManager>
+@using (Html.BeginForm()) {
+    @Html.AntiForgeryToken()
+    @Html.ValidationSummary()
 <div class="row-fluid">
     <div class="custom-central-div">
         <div class="row-fluid">
@@ -19,10 +19,16 @@
                 <label class="span1 hidden-phone" style="padding-top: 5px; text-align: right">Filter:</label>
                 <div class="pull-right span11">
                     <label class="radio inline">
-                        <asp:RadioButton ID="rdbFilterAll" GroupName="filter" Text="All Questions" runat="server" Checked="true" AutoPostBack="true" />
+                        @*<asp:RadioButton ID="rdbFilterAll" GroupName="filter" Text="All Questions" runat="server" Checked="true" AutoPostBack="true" />*@
+                        
+                        @Html.RadioButtonFor(m => Model.All, true)
+                        @Html.Label("All Questions")
                     </label>
                     <label class="radio inline">
-                        <asp:RadioButton ID="rdbFilterUnass" GroupName="filter" Text="Unassigned Questions" runat="server" AutoPostBack="true" />
+                        @*<asp:RadioButton ID="rdbFilterUnass" GroupName="filter" Text="Unassigned Questions" runat="server" AutoPostBack="true" />*@
+                        
+                        @Html.RadioButtonFor(m => Model.Unassigned, true)
+                        @Html.Label("Unassigned Questions")
                     </label>
                 </div>
             </div>
@@ -38,21 +44,22 @@
                 <asp:HiddenField ID="HdnRecordSize" runat="server" ClientIDMode="Static" />
                 <div class="row-fluid" style="margin-top: 20px;">
                     <div class="span11">
-                        <img src="../Resources/image/ua-question.png" class="icon_Stethoscope" />
+                        <img src="../Content/image/ua-question.png" class="icon_Stethoscope" />
                         Unassigned Questions
                         &nbsp;&nbsp;
-                        <img src="../Resources/image/a-question.png" class="icon_Stethoscope" />
+                        <img src="../Content/image/a-question.png" class="icon_Stethoscope" />
                         Assigned questions
                     </div>
                 </div>
             </div>
             <div style="text-align: center" id="loadingImage">
-                <img alt="Data Loading.." src="../Resources/image/ajax_loader.gif" style="width: 50px" />
+                <img alt="Data Loading.." src="../Content/image/ajax_loader.gif" style="width: 50px" />
             </div>
         </div>
     </div>
 </div>
-<script type="text/javascript" src="../Resources/js/utility.js"></script>
+}
+<script type="text/javascript" src="../Content/js/utility.js"></script>
 <script type="text/javascript">
     var indexoF;
     var responsFlag = 1;
@@ -112,16 +119,16 @@
                 for (indexcnt = 0; indexcnt < response.length; indexcnt++) {
                     var Flag = document.getElementById("HdnFlag").value;
                     if (response[indexcnt].questionstatus == 1)
-                        var img = "<img style='width:30px;margin:0 5px 0 5px;' src='../Resources/image/a-question.png'>";
+                        var img = "<img style='width:30px;margin:0 5px 0 5px;' src='../Content/image/a-question.png'>";
                     else
-                        var img = "<img style='width:30px;margin:0 5px 0 5px;' src='../Resources/image/ua-question.png'>";
+                        var img = "<img style='width:30px;margin:0 5px 0 5px;' src='../Content/image/ua-question.png'>";
                     var template;
                     var title;
                     title = "";
                     if (indexcnt % 2 != 0)
-                        template = "<div class='row-fluid icon_padding_bottom custom-yellow-back'><div class='custom-middle'>" + img + "</div><div class='custom-middle middle-size-padding question-padding' style='width:80%;word-break: break-all;'><div><a href='assignquestion.aspx?questionid=" + response[indexcnt].questionid + "' class='question_text'>" + response[indexcnt].questiontext + "</a></div></div><div  class='custom-middle'><img src='../Resources/image/del-question.png' title='Delete' class='float_right cust-del-icon' onclick='rejectQuestionByQuestionID(" + response[indexcnt].questionid + ",this)'/></div></div>";
+                        template = "<div class='row-fluid icon_padding_bottom custom-yellow-back'><div class='custom-middle'>" + img + "</div><div class='custom-middle middle-size-padding question-padding' style='width:80%;word-break: break-all;'><div><a href='assignquestion.aspx?questionid=" + response[indexcnt].questionid + "' class='question_text'>" + response[indexcnt].questiontext + "</a></div></div><div  class='custom-middle'><img src='../Content/image/del-question.png' title='Delete' class='float_right cust-del-icon' onclick='rejectQuestionByQuestionID(" + response[indexcnt].questionid + ",this)'/></div></div>";
                     else
-                        template = "<div class='row-fluid icon_padding_bottom'><div class='custom-middle '>" + img + "</div><div  class='custom-middle middle-size-padding  question-padding' style='width:80%;word-break: break-all'><div><a href='assignquestion.aspx?questionid=" + response[indexcnt].questionid + "' class='question_text'>" + response[indexcnt].questiontext + "</a></div></div><div class='custom-middle'><img src='../Resources/image/del-question.png' title='Delete' class='float_right cust-del-icon' onclick='rejectQuestionByQuestionID(" + response[indexcnt].questionid + ",this)'/></div></div>";
+                        template = "<div class='row-fluid icon_padding_bottom'><div class='custom-middle '>" + img + "</div><div  class='custom-middle middle-size-padding  question-padding' style='width:80%;word-break: break-all'><div><a href='assignquestion.aspx?questionid=" + response[indexcnt].questionid + "' class='question_text'>" + response[indexcnt].questiontext + "</a></div></div><div class='custom-middle'><img src='../Content/image/del-question.png' title='Delete' class='float_right cust-del-icon' onclick='rejectQuestionByQuestionID(" + response[indexcnt].questionid + ",this)'/></div></div>";
 
                     $("#question").append(template);
                     Question++;
