--- a/MiraiConsultMVC/Views/User/Login.cshtml
+++ b/MiraiConsultMVC/Views/User/Login.cshtml
@@ -15,9 +15,12 @@
                             <div class="control-group">
                                 <div class="row-fluid">
                                     <div class="span12 btn-padding-left controls-right-padding">
-                                        <div id="message" runat="server" visible="false">
-                                            <Label ID="lblError" runat="server"></Label>
-                                        </div>
+                                        @if (!String.IsNullOrEmpty(ViewBag.errorMsg))
+{
+    <div id="message" class="alert alert-error">
+        <label id="lblError">@ViewBag.errorMsg</label>
+    </div>
+}
                                     </div>
                                 </div>
                             </div>
@@ -26,50 +29,46 @@
                     @using  (Html.BeginForm()) 
                     { 
                          @Html.AntiForgeryToken()
-    @Html.ValidationSummary(true)
+                         @Html.ValidationSummary(true)
                     <div class="row-fluid">
                         <div class="span12">
-                            <div class="control-group btn-padding-left">
+                            <div class="span4 pull-left btn-padding-left">
                                 <label class="control-label required form-horizontal control-label">Email ID:</label>
-                                <div class="controls controls-right-padding login-padding-left">
+                                </div>
+                                <div class="span8 pull-right btn-padding-left controls-right-padding">
                                     @*<input type="password" class="input-block-level gray-border txt-position" id="txtEmail" maxlength="40" textmode="Email Id" autocomplete="off" placeholder="Password" >*@
                                     @Html.TextBoxFor(m => m.Email, new { @class = "input-block-level gray-border txt-position", maxlength = "40", textmode = "text", placeholder = "Email" })
                                     @Html.ValidationMessageFor(m => m.Email)
                                 </div>
                             </div>
-                        </div>
                     </div>
                     <div class="row-fluid">
                         <div class="span12">
-                            <div class="control-group btn-padding-left">
+                            <div class="span4 pull-left btn-padding-left">
                                 <label class="control-label required form-horizontal control-label">Password:</label>
-                                <div class="controls controls-right-padding login-padding-left">
-                                    @Html.TextBoxFor(m => m.Password, new { @class = "input-block-level gray-border txt-position", maxlength = "30", textmode = "Password", placeholder = "Password" })
-
-                                    @Html.ValidationMessageFor(m => m.Password)
-                                    @*<input type="password" class="input-block-level gray-border txt-position" id="txtPassword" maxlength="30" textmode="Password" placeholder="Password">*@
                                 </div>
+                            <div class="span8 pull-right btn-padding-left controls-right-padding">
+                                @Html.TextBoxFor(m => m.Password, new { @class = "input-block-level gray-border txt-position", maxlength = "30", type = "Password", placeholder = "Password" })
+
+                                @Html.ValidationMessageFor(m => m.Password)
+                                @*<input type="password" class="input-block-level gray-border txt-position" id="txtPassword" maxlength="30" textmode="Password" placeholder="Password">*@
                             </div>
                         </div>
                     </div>
                     <div class="row-fluid">
                         <div class="span12 btn-padding-left">
-                            <div class="control-group login-padding-left">
-                                <div class="controls">
-                                    <input ID="chkRemember" class="chkbox" type="checkbox" /><label class="chkLabel">Remember me</label>
-                                </div>
+                            <div class="span8 pull-right btn-padding-left controls-right-padding offset4">
+                                <input id="chkRemember" class="chkbox" type="checkbox" /><label class="chkLabel">Remember me</label>
                             </div>
                         </div>
                     </div>
                     
                     <div class="row-fluid">
                         <div class="span12 btn-padding-left">
-                            <div class="control-group login-padding-left">
-                                <div class="controls">
-                                    <input id="btnLogin" class="btn thanx gray-border"  type="submit" value="Sign in" />
-                                    <div class="pull-right">
-                                        <a href="forgotpassword.aspx" type="checkbox" style="color:#a7af38;font-weight:600; padding-top:5px;">Forgot Password?</a>
-                                    </div>
+                            <div class="span8 pull-right btn-padding-left controls-right-padding offset4">
+                                <input id="btnLogin" class="btn thanx gray-border" type="submit" value="Sign in" />
+                                <div class="pull-right">
+                                    <a href="forgotpassword.aspx" type="checkbox" style="color:#a7af38;font-weight:600; padding-top:5px;">Forgot Password?</a>
                                 </div>
                             </div>
                         </div>
